ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sheep-dog-dev-ingress
  labels:
    app: sheep-dog-dev
spec:
  rules:
    - host: dev.sheepdogdev.io
      http:
        paths:
          - path: "/mcp"
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-dev-mcp
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-dev-svc
                port:
                  number: 80
